--- a/Keeble/package.json
+++ b/Keeble/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@uploadthing/react": "^5.2.0",
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
     "framer-motion": "^10.13.0",
@@ -19,7 +20,9 @@
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3"
+    "react-dropzone": "^14.2.3",
+    "tailwindcss": "3.3.3",
+    "uploadthing": "^5.2.1"
   },
   "devDependencies": {
     "encoding": "^0.1.13"
