--- a/Keeble/package.json
+++ b/Keeble/package.json
@@ -19,7 +19,7 @@
     "framer-motion": "^10.13.0",
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.4",
-    "next": "13.4.10",
+    "next": "^13.4.10",
     "next-auth": "^4.22.1",
     "postcss": "8.4.26",
     "react": "18.2.0",
