--- a/Keeble/package.json
+++ b/Keeble/package.json
@@ -25,6 +25,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-intersection-observer": "^9.5.2",
+    "react-use": "^17.4.0",
     "tailwindcss": "3.3.3",
     "uploadthing": "^5.2.1"
   },
