--- a/Keeble/package.json
+++ b/Keeble/package.json
@@ -27,6 +27,7 @@
     "react-dropzone": "^14.2.3",
     "react-intersection-observer": "^9.5.2",
     "react-use": "^17.4.0",
+    "react-youtube": "^10.1.0",
     "tailwindcss": "3.3.3",
     "uploadthing": "^5.2.1"
   },
